--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* =============================================== Part of navigation meanu ==================================== */
 *{
    font-family:'roboto',sans-serif;	
  }
@@ -35,4 +36,29 @@ ul li a:hover, ul li .active{
 .logo{
 	   margin-left:15px;
 	   font-size:18px;
-     }	 
+     }	
+
+/* =============================== Part of image (laptop image) ================================*/
+	 
+.laptop_image{
+	           width:100%;
+	           height:40%;
+             }
+.banner_image{
+	           position:relative;
+	           text-align:center;
+               box-shadow: 0 0 20px 2px rgba(0,0,0.1);
+			   border-style:dassed/*dotted/*ridge*/;
+			   border-radius:200px 0px 200px 0px;
+             }
+.laptop_image{
+	           opacity:0.5;
+             }
+.center_text{
+	          position:absolute;
+	          top:50%;
+	          left:50%;
+	          transform:translate(-50%,-50%);
+            }
+
+
