--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body{
 	  margin:0%;
 	  padding:0%;
-	  background-color:/*#e8edf2*/steelblue;
+	  background-color:cyan;
     } 
 nav{
 	 display:flex;
