--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body{
 	  margin:0%;
 	  padding:0%;
-	  background-color:lightblue;
+	  background-color:#E8EDF2;
     } 
 nav{
 	 display:flex;
@@ -82,7 +82,7 @@ ul li a:hover, ul li .active{
 .Website_logo{
 	display:flex;
 	justify-content:center;
-	background-color:white;
+	background-color:lightblue;
 }
 .web_logo{
 	height:250px;
