--- a/style.css
+++ b/style.css
@@ -133,6 +133,28 @@ a{
 	color:cyan;
 }
 
+/* ===================================================== Part of E-book ============================================ */
+
+.book_container{
+	margin-left:60px;
+	margin-right:60px;
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:center;
+}
+.e_book_button{
+	margin-inline:25px;
+	padding:12px;
+	margin:12px;
+	cursor:pointer;
+	font-size:18px;
+	background-color:rgb(2,2,26);
+	color:white;
+	border-radius:20px;
+}
+
+
+
 
 
 
