--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ ul li a:hover, ul li .active{
 	justify-content:center;
 	margin-left:60px;
 	margin-right:60px;
+	background-color:#d2b4de;
 }
 .image_box{
 	width:210px;
@@ -160,7 +161,7 @@ a{
 	margin-top:30px;
 	justify-content:space-evenly;
 	display:flex;
-	background-color:/*rgb(2,2,26)*/ white;
+	background-color:/*rgb(2,2,26)*/ #d4e6f1;
 	color:black;
 }
 .footer_scetion{
