--- a/Register.css
+++ b/Register.css
@@ -43,10 +43,11 @@ h2{
 	margin-left:60px;
 }
 .register{
+	border:1px solid red;
 	margin-top:30px;
 	display:flex;
-	margin-left:60px;
-	margin-right:60px;
+	flex-wrap:wrap;
+	justify-content:center;
 }
 .input{
 	border:1px solid red;
@@ -56,12 +57,12 @@ input{
 	padding:5px;
 }
 ::placeholder{
-	padding:20px;;
+	padding:5px;;
 }
 #submit{
 	cursor:pointer;
 }
 select{
-	width:150%;
+	width:100%;
 	height:30px;
 }
