--- a/Register.css
+++ b/Register.css
@@ -59,7 +59,7 @@ select{
 .submit_reset{
 	text-align:center;
 }
-#reset{
+/*#reset{
 	width:10%;
 	cursor:pointer;
 	background-color:red;
@@ -74,12 +74,12 @@ select{
 	color:white;
 	border:1px solid black;
 	border-radius:20px;
-}
+}*/
 input#submit:hover{
-	background-color:black;
+	background-color:green;
 	border:2px solid blue;
 }
 input#reset:hover{
-	background-color:black;
+	background-color:red;
 	border:2px solid blue;
 }
