--- a/Register.css
+++ b/Register.css
@@ -43,6 +43,7 @@ h2{
 	margin-left:60px;
 }
 .main{
+	margin-top:30px;
 	display:flex;
 	justify-content:center;
 }
@@ -56,25 +57,21 @@ select{
 	width:100%;
 	height:30px;
 }
-.submit_reset{
-	text-align:center;
-}
-/*#reset{
-	width:10%;
+#reset{
+	width:20%;
 	cursor:pointer;
-	background-color:red;
+	font-size:18px;
+	background-color:rgb(2,2,26);
 	color:white;
-	border:1px solid black;
-	border-radius:20px;
+	
 }
 #submit{
-	width:10%;
+	width:20%;
 	cursor:pointer;
-	background-color:green;
+	font-size:18px;
+	background-color:rgb(2,2,26);
 	color:white;
-	border:1px solid black;
-	border-radius:20px;
-}*/
+}
 input#submit:hover{
 	background-color:green;
 	border:2px solid blue;
