--- a/course WPDV.css
+++ b/course WPDV.css
@@ -58,6 +58,7 @@ a{
 .fa-solid{
 	color:black;
 }
+/* ======================================================== Part of table ================================================== */
 button{
 	cursor:pointer;
 	background-color:green;
