--- a/wpdvbook.css
+++ b/wpdvbook.css
@@ -4,7 +4,8 @@
 }
 /*=============================== Part of close =========================================*/
 .main_close{
-	justify-content:right;
+	align-items:center;
+	justify-content:space-between;
 	text-align:right;
 	font-size:40px;
 	display:flex;
@@ -12,6 +13,11 @@
 a{
 	color:white;
 	background-color:red;
+}
+.close1{
+	margin-left:60px;
+	font-size:20px;
+	color:gray;
 }
 .close{
 	cursor:pointer;
