--- a/wpdvbook.css
+++ b/wpdvbook.css
@@ -14,6 +14,10 @@ a{
 	color:white;
 	background-color:red;
 }
+.fa-xmark{
+	text-align:center;
+	width:150%;
+}
 .close1{
 	margin-left:60px;
 	font-size:20px;
