--- a/style.css
+++ b/style.css
@@ -39,8 +39,75 @@ ul li a:hover, ul li .active{
      }	
 
 /* =============================== Part of image (laptop image) ================================*/
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  margin-left:60px;
+  margin-right:60px;
+}
+
+/*slide image section*/
+.slide_image{
+    height:300px;
+    width:100%;
+    border:1px solid black;
+}
+
+/* Caption text */
+.text {
+  color:black;
+  font-size: 15px;
+  padding: 10px 12px;
+  text-align: center;
+  margin-top: -30px;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.12s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.8s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
 	 
-.laptop_image{
+/*.laptop_image{
 	           width:100%;
 	           height:40%;
 		   opacity:0.5;
@@ -75,7 +142,7 @@ ul li a:hover, ul li .active{
   10%{
 		width:100%;
 	}
-}
+} */
 
 /*=========================================================== Part of logo =================================================*/
 
@@ -208,6 +275,7 @@ h5{
 	margin:5px;
 	padding:5px;
 }
+
 
 
 
