--- a/style.css
+++ b/style.css
@@ -154,6 +154,9 @@ a{
 	color:white;
 	border-radius:20px;
 }
+.e_book_button:hover{
+	background-color: rgb(41, 39, 39);
+}
 
 /* ======================================================== Part of footer section ======================================= */
 
@@ -209,6 +212,7 @@ h5{
 	margin:5px;
 	padding:5px;
 }
+
 
 
 
